--- a/www/_config.yml
+++ b/www/_config.yml
@@ -13,18 +13,16 @@
 # you will see them accessed via {{ site.title }}, {{ site.email }}, and so on.
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
-title: Föreldrekooperativet Bullret
+title: Föräldrakooperativet Bullret
 email: hej@bullret.se
 description: >- # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
+  Familiekooperativ i Bullaren
 baseurl: "" # the subpath of your site, e.g. /blog
-url: "https://www.bullret.se" # the base hostname & protocol for your site, e.g. http://example.com
+url: "https://bullret.se" # the base hostname & protocol for your site, e.g. http://example.com
 
 # Build settings
 markdown: kramdown
-theme: jekyll-theme-hydeout
+theme: minima
 plugins:
   - jekyll-feed
 
@@ -39,3 +37,9 @@ plugins:
 #   - vendor/cache/
 #   - vendor/gems/
 #   - vendor/ruby/
+
+header_pages:
+  - about.md
+  - coop.md
+  - fees.md
+  - apply.md
