--- a/www/_config.yml
+++ b/www/_config.yml
@@ -16,7 +16,7 @@
 title: Föräldrakooperativet Bullret
 email: hej@bullret.se
 description: >- # this means to ignore newlines until "baseurl:"
-  Familiekooperativ i Bullaren
+  Bullret, Bullarens Föräldrakooperativa Förskola ekonomisk förening
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "https://bullret.se" # the base hostname & protocol for your site, e.g. http://example.com
 
